--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
     <style name="fab_label" parent="android:TextAppearance.DeviceDefault.Inverse">
         <item name="android:background">@drawable/fab_label_background</item>
-        <item name="android:textColor">#ffffff</item> <!-- TODO(msf): themeify this -->
+        <item name="android:textColor">@color/fab_label_text_color</item>
     </style>
 
 </resources>
