--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- TODO(msf): remove these 4 hard-coded colors and replace with theme colors -->
     <color name="list_item_activated">#64cfd8dc</color>
     <color name="list_item_ripple">#a0808e95</color>
     <color name="fab_label_text_color">#000000</color>
     <color name="fab_label_background_color">#bbbbbb</color>
+
+    <color name="accent">#BBDEFB</color>
 </resources>
