ActionBar: show single menu item as toolicon

--- a/app/src/main/res/menu/main_activity.xml
+++ b/app/src/main/res/menu/main_activity.xml
@@ -6,5 +6,6 @@
         android:alphabeticShortcut="s"
         android:icon="@drawable/ic_settings"
         android:title="@string/settings"
-        app:showAsAction="never" />
+        app:showAsAction="always"
+        android:orderInCategory="1000" />
 </menu>
