--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,9 +9,8 @@
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
 
-    <style name="fab_label" parent="android:TextAppearance.DeviceDefault.Inverse">
+    <style name="fab_label" parent="TextAppearance.AppCompat.Inverse">
         <item name="android:background">@drawable/fab_label_background</item>
-        <item name="android:textColor">@color/fab_label_text_color</item>
     </style>
 
 </resources>
