--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -14,6 +14,10 @@
         <import type="com.wireguard.config.Peer" />
 
         <variable
+            name="fragment"
+            type="com.wireguard.android.fragment.TunnelEditorFragment" />
+
+        <variable
             name="config"
             type="com.wireguard.config.Config.Observable" />
     </data>
@@ -211,6 +215,15 @@
                             android:inputType="number"
                             android:text="@={config.interfaceSection.mtu}"
                             android:textAlignment="center" />
+
+                        <Button
+                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="-8dp"
+                            android:layout_below="@+id/dns_servers_text"
+                            android:onClick="@{fragment::onRequestSetExcludedApplications}"
+                            android:text="@{fragment.excludedApplications().length == 0 ? @string/set_excluded_applications : String.format(@string/x_excluded_applications, fragment.excludedApplications().length)}" />
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
 
