--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -218,12 +218,13 @@
 
                         <Button
                             style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                            android:id="@+id/set_excluded_applications"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="-8dp"
                             android:layout_below="@+id/dns_servers_text"
                             android:onClick="@{fragment::onRequestSetExcludedApplications}"
-                            android:text="@{fragment.excludedApplications().length == 0 ? @string/set_excluded_applications : String.format(@string/x_excluded_applications, fragment.excludedApplications().length)}" />
+                            android:text="@{@plurals/set_excluded_applications(config.interfaceSection.excludedApplicationsCount, config.interfaceSection.excludedApplicationsCount)}" />
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
 
