--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -96,6 +96,7 @@
                             app:filter="@{KeyInputFilter.newInstance()}" />
 
                         <Button
+                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                             android:id="@+id/generate_private_key_button"
                             android:layout_width="96dp"
                             android:layout_height="wrap_content"
@@ -223,6 +224,7 @@
                     tools:ignore="UselessLeaf" />
 
                 <Button
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
