--- a/app/src/main/res/drawable/list_item_background_anim.xml
+++ b/app/src/main/res/drawable/list_item_background_anim.xml
@@ -2,4 +2,5 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/list_item_ripple"> <!-- TODO(msf): themeify this -->
     <item android:drawable="@drawable/list_item_background" />
+    <item android:id="@android:id/mask" android:drawable="@android:color/white" />
 </ripple>
