--- a/app/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/app/src/main/res/layout/tunnel_detail_fragment.xml
@@ -5,11 +5,13 @@
 
     <data>
 
-        <import type="com.wireguard.android.fragment.TunnelController" />
-
         <import type="com.wireguard.android.model.Tunnel.State" />
 
         <import type="com.wireguard.android.util.ClipboardUtils" />
+
+        <variable
+            name="fragment"
+            type="com.wireguard.android.fragment.TunnelDetailFragment" />
 
         <variable
             name="tunnel"
@@ -63,7 +65,7 @@
                         android:layout_alignBaseline="@+id/interface_title"
                         android:layout_alignParentEnd="true"
                         app:checked="@{tunnel.state == State.UP}"
-                        app:onBeforeCheckedChanged="@{TunnelController::setTunnelState}" />
+                        app:onBeforeCheckedChanged="@{fragment::setTunnelState}" />
 
                     <TextView
                         android:id="@+id/interface_name_label"
