--- a/app/src/main/res/values/fab.xml
+++ b/app/src/main/res/values/fab.xml
@@ -3,46 +3,18 @@
     <item name="fab_expand_menu_button" type="id"/>
     <item name="fab_label" type="id"/>
 
-    <dimen name="fab_size_normal">56dp</dimen>
-    <dimen name="fab_size_mini">40dp</dimen>
-
-    <dimen name="fab_icon_size">24dp</dimen>
-
-    <dimen name="fab_plus_icon_size">14dp</dimen>
-    <dimen name="fab_plus_icon_stroke">2dp</dimen>
-
     <dimen name="fab_shadow_offset">3dp</dimen>
     <dimen name="fab_shadow_radius">9dp</dimen>
 
     <dimen name="fab_stroke_width">1dp</dimen>
 
-    <dimen name="fab_actions_spacing">16dp</dimen>
+    <dimen name="fab_actions_spacing">24dp</dimen>
     <dimen name="fab_labels_margin">8dp</dimen>
 
-    <declare-styleable name="FloatingActionButton">
-        <attr name="fab_colorPressed" format="color"/>
-        <attr name="fab_colorDisabled" format="color"/>
-        <attr name="fab_colorNormal" format="color"/>
-        <attr name="fab_icon" format="reference"/>
-        <attr name="fab_size" format="enum">
-            <enum name="normal" value="0"/>
-            <enum name="mini" value="1"/>
-        </attr>
+    <declare-styleable name="LabeledFloatingActionButton">
         <attr name="fab_title" format="string"/>
-        <attr name="fab_stroke_visible" format="boolean"/>
-    </declare-styleable>
-    <declare-styleable name="AddFloatingActionButton">
-        <attr name="fab_plusIconColor" format="color"/>
     </declare-styleable>
     <declare-styleable name="FloatingActionsMenu">
-        <attr name="fab_addButtonColorPressed" format="color"/>
-        <attr name="fab_addButtonColorNormal" format="color"/>
-        <attr name="fab_addButtonSize" format="enum">
-            <enum name="normal" value="0"/>
-            <enum name="mini" value="1"/>
-        </attr>
-        <attr name="fab_addButtonPlusIconColor" format="color"/>
-        <attr name="fab_addButtonStrokeVisible" format="boolean"/>
         <attr name="fab_labelStyle" format="reference"/>
         <attr name="fab_labelsPosition" format="enum">
             <enum name="left" value="0"/>
