fab: slide fab up when a snackbar shows
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/app/src/main/res/layout/tunnel_list_fragment.xml
+++ b/app/src/main/res/layout/tunnel_list_fragment.xml
@@ -43,7 +43,8 @@
             android:layout_margin="16dp"
             app:fab_labelStyle="@style/fab_label"
             android:clipChildren="false"
-            app:fab_labelsPosition="left" >
+            app:fab_labelsPosition="left"
+            app:layout_behavior="com.wireguard.android.widget.fab.FloatingActionButtonBehavior" >
 
             <com.wireguard.android.widget.fab.LabeledFloatingActionButton
                 android:id="@+id/create_empty"
