theme: use less disgusting color
Harsh's "users" were offended by the dark theme. So, we change the
accent to that used by gboard's dark theme, which should be pretty
uncontroversial.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,5 +6,5 @@
     <color name="fab_label_text_color">#000000</color>
     <color name="fab_label_background_color">#bbbbbb</color>
 
-    <color name="accent">#BBDEFB</color>
+    <color name="accent">#5e97f6</color>
 </resources>
