fab: move in direct ratio to scroll

--- a/app/src/main/res/layout/tunnel_list_fragment.xml
+++ b/app/src/main/res/layout/tunnel_list_fragment.xml
@@ -30,7 +30,7 @@
             android:id="@+id/tunnel_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/design_fab_size_normal"
+            android:paddingBottom="@{@dimen/design_fab_size_normal * 1.1f}"
             android:clipToPadding="false"
             android:choiceMode="multipleChoiceModal"
             app:items="@{tunnels}"
