--- a/app/src/main/res/drawable/list_item_background.xml
+++ b/app/src/main/res/drawable/list_item_background.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/list_item_activated" android:state_activated="true" /> <!-- TODO(msf): themeify this -->
-    <item android:drawable="@android:color/transparent" /> <!-- TODO(msf): themeify this -->
+    <!-- TODO(msf): somehow make an additional activated color entry here (or elsewhere?) that
+                    is in use only in multiselect mode, and one that's in use only in ordinary
+		    select mode. In otherwords, we don't want to use the same background color
+		    for both multiselect and normal select (on two column machines).
+    -->
+    <item android:drawable="@color/list_item_activated" android:state_activated="true" /> <!-- TODO(msf): get color from theme with ?android/attr: -->
+    <item android:drawable="@android:color/transparent" /> <!-- TODO(msf): get color from theme with ?android/attr: -->
 </selector>
