--- a/app/src/main/res/layout/config_naming_dialog_fragment.xml
+++ b/app/src/main/res/layout/config_naming_dialog_fragment.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <import type="com.wireguard.android.widget.NameInputFilter" />
+    </data>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -15,7 +20,9 @@
                 android:id="@+id/tunnel_name_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/tunnel_name" />
+                android:hint="@string/tunnel_name"
+                android:inputType="textNoSuggestions|textVisiblePassword"
+                app:filter="@{NameInputFilter.newInstance()}" />
 
         </android.support.design.widget.TextInputLayout>
 
