Style: use attrs from appcompat rather than from frameworks
This isn't possible for colorForeground, colorBackground,
textAppearanceMedium, but at least it's useful for some things here.

--- a/app/src/main/res/drawable/list_item_background.xml
+++ b/app/src/main/res/drawable/list_item_background.xml
@@ -4,12 +4,12 @@
     <item>
         <selector>
             <item app:state_multiselected="true" android:state_activated="true">
-                <color android:color="?android:attr/colorControlActivated" />
+                <color android:color="?attr/colorControlActivated" />
             </item>
             <item app:state_multiselected="false" android:state_activated="true">
-                <color android:color="?android:attr/colorControlHighlight" />
+                <color android:color="?attr/colorControlHighlight" />
             </item>
         </selector>
     </item>
-    <item android:drawable="?android:attr/selectableItemBackground" />
+    <item android:drawable="?attr/selectableItemBackground" />
 </layer-list>
