--- a/app/src/main/res/drawable/list_item_background.xml
+++ b/app/src/main/res/drawable/list_item_background.xml
@@ -3,10 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item>
         <selector>
-            <item app:state_multiselected="true" android:state_activated="true">
+            <item
+                android:state_activated="true"
+                app:state_multiselected="true">
                 <color android:color="?attr/colorControlActivated" />
             </item>
-            <item app:state_multiselected="false" android:state_activated="true">
+            <item
+                android:state_activated="true"
+                app:state_multiselected="false">
                 <color android:color="?attr/colorControlHighlight" />
             </item>
         </selector>
